--- a/States.sketchplugin/Contents/Sketch/manifest.json
+++ b/States.sketchplugin/Contents/Sketch/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "States",
-	"description": "A plugin which saves and applies layer states to create different compositions of current artboard",
-	"author": "Dmitry Rodionov",
-	"homepage": "XXX",
+	"description": "Create different artboard states and switch between them easily",
+	"author": "Eden Vidal",
+	"homepage": "http://edenvidal.com",
 	"version": 0.92,
 	"identifier": "exposed.internals.statum-for-sketch",
 	"compatibleVersion": 3,
