--- a/States.sketchplugin/Contents/Resources/States.bundle/Contents/Info.plist
+++ b/States.sketchplugin/Contents/Resources/States.bundle/Contents/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.100</string>
+	<string>0.97</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -41,6 +41,6 @@
 	<key>DTXcodeBuild</key>
 	<string>7D175</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Internals Exposed. All rights reserved.</string>
+	<string>Copyright © 2016 Eden Vidal. All rights reserved.</string>
 </dict>
 </plist>
