--- a/Debug.xcconfig
+++ b/Debug.xcconfig
@@ -1,10 +1,8 @@
+// Debug.xcconfig
+// Copyright (c) 2016 Eden Vidal
 //
-//  Debug.xcconfig
-//  States
-//
-//  Created by Dmitry Rodionov on 09/08/16.
-//  Copyright © 2016 Internals Exposed. All rights reserved.
-//
+// This software may be modified and distributed under the terms
+// of the MIT license.  See the LICENSE file for details.
 
 #include "Versioning.xcconfig"
 
